* Set Navigation to fixed position * Adjust z-index of Footer

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -2,6 +2,7 @@
   background-color: #151516;
   position: fixed;
   bottom: 0;
+  z-index: 2;
   width: 100%;
   height: 85px;
   display: flex;
