--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,10 +1,14 @@
 .navigation {
+  position: fixed;
+  top: 0;
+  z-index: 2;
   background-color: #151516;
   display: flex;
   flex-direction: row-reverse;
   justify-content: space-between;
   align-items: center;
   padding: 20px;
+  width: 100%;
   height: 85px;
   box-shadow: 1px 1px 25px 10px rgba(0, 0, 0, 0.15);
 }
